--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,9 @@
       <load src="./partials/faq.html" />
       <load src="./partials/covers.html" />
       <load src="./partials/reviews.html" />
-      <load src="./partials/work-together.html" />
     </main>
+
+    <load src="./partials/footer-work-together.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
