--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       <load src="./partials/faq.html" />
       <load src="./partials/covers.html" />
       <load src="./partials/reviews.html" />
+      <load src="./partials/mobile-menu.html" />
     </main>
 
     <load src="./partials/footer-work-together.html" />
